--- a/employee-backend-serv/emp-waiter/pom.xml
+++ b/employee-backend-serv/emp-waiter/pom.xml
@@ -11,6 +11,12 @@
 
     <groupId>com.wnxy.waiter</groupId>
     <artifactId>emp-waiter</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
