--- a/employee-backend-serv/emp-waiter/src/main/resources/application.yml
+++ b/employee-backend-serv/emp-waiter/src/main/resources/application.yml
@@ -14,9 +14,10 @@ spring:
 
 
   # 配置Redis
-#  redis:
-#    host: 192.168.80.9
-#    port: 6379
+  redis:
+    host: 192.168.80.9
+#    host: localhost
+    port: 6379
 
 
 # mybatis-plus的配置
