下单接口幂等性保障起步-14:41-11-27

--- a/employee-backend-serv/emp-waiter/pom.xml
+++ b/employee-backend-serv/emp-waiter/pom.xml
@@ -42,6 +42,12 @@
             <version>3.10.0</version>
         </dependency>
 
+<!--        消息队列-->
+        <dependency>
+            <groupId>org.springframework.amqp</groupId>
+            <artifactId>spring-rabbit</artifactId>
+        </dependency>
+
 
 
     </dependencies>
